fix(project): avoid workspace lock when renaming project (#3233)
Wait for Project initialization jobs before renaming projects.